add_unit_test(functional_curry "curry.cpp")
add_unit_test(functional_compose "compose.cpp")
add_unit_test(functional_demux "demux.cpp")
add_unit_test(functional_fix_point "fix_point.cpp")
add_unit_test(functional_iterate "iterate.cpp")
add_unit_test(functional_lockstep "lockstep.cpp")
add_unit_test(functional_on "on.cpp")
add_unit_test(functional_partial "partial.cpp")
add_unit_test(functional_placeholder "placeholder.cpp")
add_unit_test(functional_reverse_partial "reverse_partial.cpp")

add_subdirectory(lazy)
